--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 150px;
 }
 
 .nav-title {
@@ -43,4 +44,19 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/* Header Related Styles*/
+.header{
+    background-color: #FFF8F3;
+}
+
+.banner{
+    padding: 50px 15px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .img {
+    width: 500px;
 }
