added skill section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -116,3 +116,14 @@ main{
 .about-info{
     text-align: center;
 }
+
+/* What I Do section Styles */
+
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+.skill-container{
+    display: flex;
+    justify-content: space-between;
+}
