--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -123,7 +123,29 @@ main{
     padding: 30px 150px;
 }
 
-.skill-container{
+.what-i-do-description{
+    text-align: center;
+}
+
+.skills-containter{
     display: flex;
-    justify-content: space-between;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0,0,0, 0.06);
+}
+
+.skill-description{
+    color:#757575;
+}
+
+/*Resume Section Styles*/
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
