--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -180,3 +180,12 @@ main{
     text-align: center;
     margin-top: 50px;
 }
+
+/*Footer Section Styles*/
+
+footer{
+    display: flex;
+    padding: 130px 200px;
+    margin-top: 100px;
+    background: #FFF8F3;
+}
