--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -186,6 +186,27 @@ main{
 footer{
     display: flex;
     padding: 130px 200px;
+    gap: 100px;
     margin-top: 100px;
     background: #FFF8F3;
 }
+
+.footer-section{
+    width: 50%;
+}
+
+.contact input[type="text"], input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color:#757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0px;
+    width: 100%;
+}
+
+.social-links a { 
+    margin-right: 25px;
+}
+
